--- a/index.html
+++ b/index.html
@@ -163,35 +163,53 @@
 </head>
 <body>
     <div class="container">
-        <div class="avatar">🌰</div>
+        <div class="avatar">
+            <div class="nut-icon">
+                <svg viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <!-- Digital geometric nut -->
+                    <path d="M50 10 L70 25 L70 45 L50 60 L30 45 L30 25 Z" fill="#a68968" opacity="0.8"/>
+                    <path d="M50 10 L70 25 L50 40 Z" fill="#8b6f47"/>
+                    <path d="M50 40 L70 25 L70 45 L50 60 Z" fill="#6f583a"/>
+                    <path d="M50 40 L30 25 L30 45 L50 60 Z" fill="#5a4830"/>
+                    <circle cx="50" cy="35" r="3" fill="#fff" opacity="0.9"/>
+                    <circle cx="45" cy="40" r="2" fill="#fff" opacity="0.7"/>
+                    <circle cx="55" cy="40" r="2" fill="#fff" opacity="0.7"/>
+                    <!-- Digital elements -->
+                    <line x1="35" y1="30" x2="40" y2="35" stroke="#a68968" stroke-width="1" opacity="0.5"/>
+                    <line x1="65" y1="30" x2="60" y2="35" stroke="#a68968" stroke-width="1" opacity="0.5"/>
+                    <circle cx="35" cy="30" r="1.5" fill="#8b6f47" opacity="0.8"/>
+                    <circle cx="65" cy="30" r="1.5" fill="#8b6f47" opacity="0.8"/>
+                </svg>
+            </div>
+        </div>
         
         <h1>Mr. Nut</h1>
         <p class="tagline">Mr. Nut's online adventure starts here</p>
         <p class="bio">Building digital experiences</p>
 
         <div class="links">
-            <a href="mailto:hello@mrnut.org" class="link-btn">
+            <a href="mailto:info@mrnut.org" class="link-btn">
                 <svg fill="currentColor" viewBox="0 0 24 24">
                     <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
                 </svg>
                 Email
             </a>
 
-            <a href="https://linkedin.com/in/yourprofile" class="link-btn" target="_blank" rel="noopener">
+            <a href="https://linkedin.com/in/riesnotenboom" class="link-btn" target="_blank" rel="noopener">
                 <svg fill="currentColor" viewBox="0 0 24 24">
                     <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
                 </svg>
                 LinkedIn
             </a>
 
-            <a href="https://github.com/yourusername" class="link-btn" target="_blank" rel="noopener">
+            <a href="https://github.com/Sincx79" class="link-btn" target="_blank" rel="noopener">
                 <svg fill="currentColor" viewBox="0 0 24 24">
                     <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
                 </svg>
                 GitHub
             </a>
 
-            <a href="https://twitter.com/yourusername" class="link-btn" target="_blank" rel="noopener">
+            <a href="https://twitter.com/Sincx79" class="link-btn" target="_blank" rel="noopener">
                 <svg fill="currentColor" viewBox="0 0 24 24">
                     <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
                 </svg>
