--- a/index.html
+++ b/index.html
@@ -1,223 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mr. Nut - Online Adventure</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Mr. Nut — Online Adventure</title>
 
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            background: linear-gradient(135deg, #f5f3ef 0%, #e8e4dc 100%);
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 20px;
-            color: #3a3027;
-        }
+  <!-- Use the same PNG for the tab icon (works fine even if it's large) -->
+  <link rel="icon" type="image/png" sizes="32x32" href="./mrnut_logo.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="./mrnut_logo.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./mrnut_logo.png">
+  <meta name="theme-color" content="#0A0F16"/>
 
-        .container {
-            max-width: 600px;
-            background: white;
-            border-radius: 20px;
-            padding: 60px 40px;
-            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.08);
-            text-align: center;
-        }
-
-        .avatar {
-            width: 120px;
-            height: 120px;
-            background: linear-gradient(135deg, #1a1a1a 0%, #3a3a3a 100%);
-            border-radius: 16px;
-            margin: 0 auto 30px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            position: relative;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
-            animation: float 3s ease-in-out infinite;
-        }
-
-        @keyframes float {
-            0%, 100% { transform: translateY(0px); }
-            50% { transform: translateY(-10px); }
-        }
-
-        .avatar::before {
-            content: '';
-            position: absolute;
-            inset: -2px;
-            background: linear-gradient(45deg, #8b6f47, #a68968, #8b6f47);
-            border-radius: 16px;
-            z-index: -1;
-            animation: rotate 4s linear infinite;
-        }
-
-        @keyframes rotate {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        .nut-icon {
-            width: 60px;
-            height: 60px;
-            position: relative;
-        }
-
-        .nut-icon svg {
-            width: 100%;
-            height: 100%;
-            filter: drop-shadow(0 0 10px rgba(139, 111, 71, 0.5));
-        }
-
-        h1 {
-            font-size: 42px;
-            margin-bottom: 12px;
-            color: #3a3027;
-            font-weight: 700;
-        }
-
-        .tagline {
-            font-size: 20px;
-            color: #8b6f47;
-            margin-bottom: 16px;
-            font-style: italic;
-        }
-
-        .bio {
-            font-size: 16px;
-            color: #6b5d52;
-            margin-bottom: 40px;
-            line-height: 1.6;
-        }
-
-        .links {
-            display: flex;
-            gap: 16px;
-            justify-content: center;
-            flex-wrap: wrap;
-        }
-
-        .link-btn {
-            display: inline-flex;
-            align-items: center;
-            gap: 8px;
-            padding: 12px 24px;
-            background: #8b6f47;
-            color: white;
-            text-decoration: none;
-            border-radius: 12px;
-            font-size: 15px;
-            font-weight: 500;
-            transition: all 0.3s ease;
-            box-shadow: 0 2px 10px rgba(139, 111, 71, 0.2);
-        }
-
-        .link-btn:hover {
-            background: #6f583a;
-            transform: translateY(-2px);
-            box-shadow: 0 4px 15px rgba(139, 111, 71, 0.3);
-        }
-
-        .link-btn svg {
-            width: 20px;
-            height: 20px;
-        }
-
-        .footer {
-            margin-top: 50px;
-            font-size: 14px;
-            color: #a68968;
-        }
-
-        @media (max-width: 600px) {
-            .container {
-                padding: 40px 24px;
-            }
-
-            h1 {
-                font-size: 32px;
-            }
-
-            .tagline {
-                font-size: 18px;
-            }
-
-            .links {
-                flex-direction: column;
-                align-items: stretch;
-            }
-
-            .link-btn {
-                justify-content: center;
-            }
-        }
-    </style>
+  <style>
+    :root{
+      --bg:#0a0f16; --neon:#00e5ff; --neon-2:#00b7ff;
+      --ink:#dff9ff; --muted:#7ec9de;
+    }
+    *{box-sizing:border-box;margin:0;padding:0}
+    body{
+      font-family: ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,Ubuntu,Cantarell,Arial;
+      min-height:100svh;color:var(--ink);
+      background:
+        radial-gradient(1200px 600px at 50% -10%, rgba(0,229,255,.18), transparent 60%),
+        radial-gradient(1000px 500px at 110% 120%, rgba(0,121,255,.20), transparent 60%),
+        radial-gradient(800px 400px at -10% 120%, rgba(0,229,255,.12), transparent 60%),
+        var(--bg);
+      display:flex;align-items:center;justify-content:center;padding:32px;
+    }
+    .container{
+      width:min(760px, 92vw);
+      background:linear-gradient(180deg, rgba(13,18,28,.7), rgba(9,14,22,.6));
+      border-radius:24px; padding:24px 40px 56px; position:relative; overflow:hidden;
+      box-shadow:0 0 0 1px rgba(0,229,255,.25) inset,
+                 0 30px 80px rgba(0,0,0,.6),
+                 0 0 120px rgba(0,229,255,.12);
+    }
+    .hero-logo{
+      width:min(320px, 70%); aspect-ratio:1/1; display:block; margin:12px auto 8px;
+      object-fit:contain;
+      filter: drop-shadow(0 0 18px rgba(0,229,255,.45))
+              drop-shadow(0 0 40px rgba(0,183,255,.18));
+      animation:float 4s ease-in-out infinite;
+    }
+    @keyframes float{50%{transform:translateY(-6px)}}
+    h1{
+      font-size:42px; font-weight:800; letter-spacing:.4px; text-align:center;
+      text-shadow:0 0 20px rgba(0,229,255,.25); margin-top:6px
+    }
+    .tagline{ text-align:center; margin:6px 0 14px; color:var(--muted); font-size:18px }
+    .bio{ text-align:center; margin:0 auto 30px; max-width:54ch; line-height:1.6; color:#bfefff; opacity:.9 }
+    .links{ display:flex; flex-wrap:wrap; gap:14px; justify-content:center }
+    .link-btn{
+      display:inline-flex; align-items:center; gap:10px; padding:12px 20px; border-radius:12px;
+      color:#001219; text-decoration:none; font-weight:700;
+      background: radial-gradient(200% 200% at 0% 0%, var(--neon) 0 30%, var(--neon-2) 60%, #0091ff 100%);
+      box-shadow: 0 0 0 1px rgba(0,229,255,.35) inset,
+                  0 8px 24px rgba(0,183,255,.35),
+                  0 0 60px rgba(0,229,255,.18);
+      transition:.2s transform,.2s box-shadow,.2s filter;
+    }
+    .link-btn:hover{
+      transform:translateY(-2px) scale(1.02);
+      box-shadow:0 0 0 1px rgba(255,255,255,.5) inset,
+                 0 10px 26px rgba(0,183,255,.45),
+                 0 0 80px rgba(0,229,255,.25);
+      filter:saturate(1.1);
+    }
+    .link-btn svg{ width:20px; height:20px; fill:#001219 }
+    .footer{ margin-top:40px; text-align:center; color:#8adfff; font-size:14px; opacity:.85 }
+    @media (max-width:600px){
+      h1{font-size:34px} .tagline{font-size:16px} .bio{font-size:15px}
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <div class="avatar">
-            <div class="nut-icon">
-                <svg viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <!-- Digital geometric nut -->
-                    <path d="M50 10 L70 25 L70 45 L50 60 L30 45 L30 25 Z" fill="#a68968" opacity="0.8"/>
-                    <path d="M50 10 L70 25 L50 40 Z" fill="#8b6f47"/>
-                    <path d="M50 40 L70 25 L70 45 L50 60 Z" fill="#6f583a"/>
-                    <path d="M50 40 L30 25 L30 45 L50 60 Z" fill="#5a4830"/>
-                    <circle cx="50" cy="35" r="3" fill="#fff" opacity="0.9"/>
-                    <circle cx="45" cy="40" r="2" fill="#fff" opacity="0.7"/>
-                    <circle cx="55" cy="40" r="2" fill="#fff" opacity="0.7"/>
-                    <!-- Digital elements -->
-                    <line x1="35" y1="30" x2="40" y2="35" stroke="#a68968" stroke-width="1" opacity="0.5"/>
-                    <line x1="65" y1="30" x2="60" y2="35" stroke="#a68968" stroke-width="1" opacity="0.5"/>
-                    <circle cx="35" cy="30" r="1.5" fill="#8b6f47" opacity="0.8"/>
-                    <circle cx="65" cy="30" r="1.5" fill="#8b6f47" opacity="0.8"/>
-                </svg>
-            </div>
-        </div>
-        
-        <h1>Mr. Nut</h1>
-        <p class="tagline">Mr. Nut's online adventure starts here</p>
-        <p class="bio">Building digital experiences</p>
+  <div class="container">
+    <!-- TOP: your PNG logo (file is in the same folder as index.html) -->
+    <img class="hero-logo" src="./mrnut_logo.png" alt="Mr. Nut neon logo">
 
-        <div class="links">
-            <a href="mailto:info@mrnut.org" class="link-btn">
-                <svg fill="currentColor" viewBox="0 0 24 24">
-                    <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
-                </svg>
-                Email
-            </a>
+    <h1>Mr. Nut</h1>
+    <p class="tagline">Online adventure — neon edition</p>
+    <p class="bio">Building digital experiences with a crisp, cyber-blue vibe. Explore, connect and ship.</p>
 
-            <a href="https://linkedin.com/in/riesnotenboom" class="link-btn" target="_blank" rel="noopener">
-                <svg fill="currentColor" viewBox="0 0 24 24">
-                    <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
-                </svg>
-                LinkedIn
-            </a>
-
-            <a href="https://github.com/Sincx79" class="link-btn" target="_blank" rel="noopener">
-                <svg fill="currentColor" viewBox="0 0 24 24">
-                    <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
-                </svg>
-                GitHub
-            </a>
-
-            <a href="https://twitter.com/Sincx79" class="link-btn" target="_blank" rel="noopener">
-                <svg fill="currentColor" viewBox="0 0 24 24">
-                    <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
-                </svg>
-                Twitter
-            </a>
-        </div>
-
-        <p class="footer">Welcome to the adventure 🌰</p>
+    <div class="links">
+      <a href="mailto:info@mrnut.org" class="link-btn" aria-label="Email">
+        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2Zm0 4-8 5L4 8V6l8 5 8-5v2Z"/></svg>
+        Email
+      </a>
+      <a href="https://linkedin.com/in/riesnotenboom" class="link-btn" target="_blank" rel="noopener">
+        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M19 0H5A5 5 0 0 0 0 5v14a5 5 0 0 0 5 5h14a5 5 0 0 0 5-5V5a5 5 0 0 0-5-5Zm-11 19H5V8h3v11ZM6.5 6.7A1.75 1.75 0 1 1 6.5 3.2a1.75 1.75 0 0 1 0 3.5ZM20 19h-3v-5.6c0-3.37-4-3.11-4 0V19h-3V8h3v1.8c1.4-2.59 7-2.78 7 2.48V19Z"/></svg>
+        LinkedIn
+      </a>
+      <a href="https://github.com/Sincx79" class="link-btn" target="_blank" rel="noopener">
+        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.44 9.8 8.21 11.39.6.11.79-.26.79-.58v-2.24c-3.34.73-4.03-1.42-4.03-1.42-.55-1.39-1.33-1.76-1.33-1.76-1.09-.75.08-.73.08-.73 1.21.09 1.84 1.24 1.84 1.24 1.07 1.83 2.81 1.3 3.5.99.11-.78.42-1.31.76-1.61-2.67-.3-5.47-1.33-5.47-5.93 0-1.31.47-2.38 1.24-3.22-.12-.3-.54-1.52.12-3.18 0 0 1.01-.32 3.3 1.23.96-.27 1.98-.4 3-.4s2.04.13 3 .4c2.29-1.55 3.3-1.23 3.3-1.23.66 1.66.24 2.88.12 3.18.77.84 1.24 1.91 1.24 3.22 0 4.61-2.81 5.63-5.48 5.93.43.37.82 1.1.82 2.22v3.29c0 .32.19.69.8.58C20.56 21.8 24 17.3 24 12 24 5.37 18.63 0 12 0Z"/></svg>
+        GitHub
+      </a>
+      <a href="https://twitter.com/Sincx79" class="link-btn" target="_blank" rel="noopener">
+        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M18.24 2.25h3.31l-7.23 8.26 8.5 11.24H16.17l-5.21-6.82L4.99 21.75H1.68l7.73-8.84L1.25 2.25H8.08l4.71 6.23zm-1.16 17.52h1.83L7.08 4.13H5.12z"/></svg>
+        Twitter
+      </a>
     </div>
+
+    <p class="footer">Welcome to the adventure ✨</p>
+  </div>
 </body>
 </html>
