--- a/index.html
+++ b/index.html
@@ -5,16 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Mr. Nut — Online Adventure</title>
 
-  <!-- Use the same PNG for the tab icon (works fine even if it's large) -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./mrnut_logo.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="./mrnut_logo.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="./mrnut_logo.png">
+  <!-- Transparent favicon (inline SVG, cyan glow, no background) -->
+  <link rel="icon" type="image/svg+xml"
+    href='data:image/svg+xml;utf8,
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+      <defs>
+        <linearGradient id="c" x1="0" y1="0" x2="1" y2="1">
+          <stop offset="0%" stop-color="%2300E5FF"/>
+          <stop offset="100%" stop-color="%2300A7FF"/>
+        </linearGradient>
+        <filter id="g"><feGaussianBlur stdDeviation="1.2"/></filter>
+      </defs>
+      <!-- transparent canvas -->
+      <path d="M32 6 52 18v28L32 58 12 46V18z" fill="none" stroke="url(%23c)" stroke-width="3" filter="url(%23g)"/>
+      <path d="M32 8 50 19v26L32 56 14 45V19z" fill="none" stroke="%2300E5FF" stroke-width="1.6"/>
+      <path d="M22 22h6l8 12V22h6v20h-6l-8-12v12h-6z" fill="%2300D9FF"/>
+    </svg>' />
   <meta name="theme-color" content="#0A0F16"/>
 
   <style>
     :root{
-      --bg:#0a0f16; --neon:#00e5ff; --neon-2:#00b7ff;
-      --ink:#dff9ff; --muted:#7ec9de;
+      --bg:#0a0f16; --neon:#00e5ff; --neon-2:#00b7ff; --ink:#dff9ff; --muted:#7ec9de;
     }
     *{box-sizing:border-box;margin:0;padding:0}
     body{
@@ -31,77 +42,4 @@
       width:min(760px, 92vw);
       background:linear-gradient(180deg, rgba(13,18,28,.7), rgba(9,14,22,.6));
       border-radius:24px; padding:24px 40px 56px; position:relative; overflow:hidden;
-      box-shadow:0 0 0 1px rgba(0,229,255,.25) inset,
-                 0 30px 80px rgba(0,0,0,.6),
-                 0 0 120px rgba(0,229,255,.12);
-    }
-    .hero-logo{
-      width:min(320px, 70%); aspect-ratio:1/1; display:block; margin:12px auto 8px;
-      object-fit:contain;
-      filter: drop-shadow(0 0 18px rgba(0,229,255,.45))
-              drop-shadow(0 0 40px rgba(0,183,255,.18));
-      animation:float 4s ease-in-out infinite;
-    }
-    @keyframes float{50%{transform:translateY(-6px)}}
-    h1{
-      font-size:42px; font-weight:800; letter-spacing:.4px; text-align:center;
-      text-shadow:0 0 20px rgba(0,229,255,.25); margin-top:6px
-    }
-    .tagline{ text-align:center; margin:6px 0 14px; color:var(--muted); font-size:18px }
-    .bio{ text-align:center; margin:0 auto 30px; max-width:54ch; line-height:1.6; color:#bfefff; opacity:.9 }
-    .links{ display:flex; flex-wrap:wrap; gap:14px; justify-content:center }
-    .link-btn{
-      display:inline-flex; align-items:center; gap:10px; padding:12px 20px; border-radius:12px;
-      color:#001219; text-decoration:none; font-weight:700;
-      background: radial-gradient(200% 200% at 0% 0%, var(--neon) 0 30%, var(--neon-2) 60%, #0091ff 100%);
-      box-shadow: 0 0 0 1px rgba(0,229,255,.35) inset,
-                  0 8px 24px rgba(0,183,255,.35),
-                  0 0 60px rgba(0,229,255,.18);
-      transition:.2s transform,.2s box-shadow,.2s filter;
-    }
-    .link-btn:hover{
-      transform:translateY(-2px) scale(1.02);
-      box-shadow:0 0 0 1px rgba(255,255,255,.5) inset,
-                 0 10px 26px rgba(0,183,255,.45),
-                 0 0 80px rgba(0,229,255,.25);
-      filter:saturate(1.1);
-    }
-    .link-btn svg{ width:20px; height:20px; fill:#001219 }
-    .footer{ margin-top:40px; text-align:center; color:#8adfff; font-size:14px; opacity:.85 }
-    @media (max-width:600px){
-      h1{font-size:34px} .tagline{font-size:16px} .bio{font-size:15px}
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <!-- TOP: your PNG logo (file is in the same folder as index.html) -->
-    <img class="hero-logo" src="./mrnut_logo.png" alt="Mr. Nut neon logo">
-
-    <h1>Mr. Nut</h1>
-    <p class="tagline">Online adventure — neon edition</p>
-    <p class="bio">Building digital experiences with a crisp, cyber-blue vibe. Explore, connect and ship.</p>
-
-    <div class="links">
-      <a href="mailto:info@mrnut.org" class="link-btn" aria-label="Email">
-        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2Zm0 4-8 5L4 8V6l8 5 8-5v2Z"/></svg>
-        Email
-      </a>
-      <a href="https://linkedin.com/in/riesnotenboom" class="link-btn" target="_blank" rel="noopener">
-        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M19 0H5A5 5 0 0 0 0 5v14a5 5 0 0 0 5 5h14a5 5 0 0 0 5-5V5a5 5 0 0 0-5-5Zm-11 19H5V8h3v11ZM6.5 6.7A1.75 1.75 0 1 1 6.5 3.2a1.75 1.75 0 0 1 0 3.5ZM20 19h-3v-5.6c0-3.37-4-3.11-4 0V19h-3V8h3v1.8c1.4-2.59 7-2.78 7 2.48V19Z"/></svg>
-        LinkedIn
-      </a>
-      <a href="https://github.com/Sincx79" class="link-btn" target="_blank" rel="noopener">
-        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.44 9.8 8.21 11.39.6.11.79-.26.79-.58v-2.24c-3.34.73-4.03-1.42-4.03-1.42-.55-1.39-1.33-1.76-1.33-1.76-1.09-.75.08-.73.08-.73 1.21.09 1.84 1.24 1.84 1.24 1.07 1.83 2.81 1.3 3.5.99.11-.78.42-1.31.76-1.61-2.67-.3-5.47-1.33-5.47-5.93 0-1.31.47-2.38 1.24-3.22-.12-.3-.54-1.52.12-3.18 0 0 1.01-.32 3.3 1.23.96-.27 1.98-.4 3-.4s2.04.13 3 .4c2.29-1.55 3.3-1.23 3.3-1.23.66 1.66.24 2.88.12 3.18.77.84 1.24 1.91 1.24 3.22 0 4.61-2.81 5.63-5.48 5.93.43.37.82 1.1.82 2.22v3.29c0 .32.19.69.8.58C20.56 21.8 24 17.3 24 12 24 5.37 18.63 0 12 0Z"/></svg>
-        GitHub
-      </a>
-      <a href="https://twitter.com/Sincx79" class="link-btn" target="_blank" rel="noopener">
-        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M18.24 2.25h3.31l-7.23 8.26 8.5 11.24H16.17l-5.21-6.82L4.99 21.75H1.68l7.73-8.84L1.25 2.25H8.08l4.71 6.23zm-1.16 17.52h1.83L7.08 4.13H5.12z"/></svg>
-        Twitter
-      </a>
-    </div>
-
-    <p class="footer">Welcome to the adventure ✨</p>
-  </div>
-</body>
-</html>
+      box-shadow:0 0
