--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     <img class="hero-logo" src="./mrnut_logo.png" alt="Mr. Nut neon logo">
 
     <h1>Mr. Nut</h1>
-    <p class="tagline">Online adventure — neon edition</p>
-    <p class="bio">Building digital experiences with a crisp, cyber-blue vibe. Explore, connect and ship.</p>
+    <p class="tagline">"Exploring what's possible in the AI era—together."</p>
+    <p class="bio">Bridging the gap between AI potential and business reality—one practical step at a time.</p>
 
     <div class="links">
       <a href="mailto:info@mrnut.org" class="link-btn" aria-label="Email">
