--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </a>
     </div>
 
-    <p class="footer">Welcome to the adventure ✨</p>
+    <p class="footer">"Exploring AI possibilities and bringing them into everyday business and life."</p>
   </div>
 </body>
 </html>
