--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Mr. Nut — Online Adventure</title>
 
-  <!-- Use the same PNG for the tab icon (works fine even if it's large) -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./mrnut_logo.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="./mrnut_logo.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="./mrnut_logo.png">
+  <!-- Favicon - using your logo from images folder -->
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/mini_logo.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="./images/mini_logo.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./images/mini_logo.png">
   <meta name="theme-color" content="#0A0F16"/>
 
   <style>
@@ -75,12 +75,12 @@
 </head>
 <body>
   <div class="container">
-    <!-- TOP: your PNG logo (file is in the same folder as index.html) -->
-    <img class="hero-logo" src="./mrnut_logo.png" alt="Mr. Nut neon logo">
+    <!-- Updated: Logo from images folder -->
+    <img class="hero-logo" src="./images/Logo.png" alt="Mr. Nut digital logo">
 
     <h1>Mr. Nut</h1>
-    <p class="tagline">"Exploring what's possible in the AI era—together."</p>
-    <p class="bio">Bridging the gap between AI potential and business reality—one practical step at a time.</p>
+    <p class="tagline">Exploring AI-driven business solutions and sharing the journey</p>
+    <p class="bio">Exploring what's possible in the AI era—together.</p>
 
     <div class="links">
       <a href="mailto:info@mrnut.org" class="link-btn" aria-label="Email">
@@ -101,7 +101,7 @@
       </a>
     </div>
 
-    <p class="footer">"Exploring AI possibilities and bringing them into everyday business and life."</p>
+    <p class="footer">Welcome to the adventure ✨</p>
   </div>
 </body>
 </html>
