--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Mr. Nut — Online Adventure</title>
-
   <!-- Favicon - using your logo from images folder -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/mini_logo.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="./images/mini_logo.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="./images/mini_logo.png">
-  <meta name="theme-color" content="#0A0F16"/>
-
+<link rel="icon" type="image/png" sizes="32x32" href="./images/mini_logo.png">
+<link rel="icon" type="image/png" sizes="192x192" href="./images/mini_logo.png">
+<link rel="apple-touch-icon" sizes="180x180" href="./images/mini_logo.png">
   <style>
     :root{
       --bg:#0a0f16; --neon:#00e5ff; --neon-2:#00b7ff;
@@ -76,7 +73,7 @@
 <body>
   <div class="container">
     <!-- Updated: Logo from images folder -->
-    <img class="hero-logo" src="./images/Logo.png" alt="Mr. Nut digital logo">
+  <img class="hero-logo" src="./images/NUT_N_LOGO_.png" alt="Mr. Nut digital logo">
 
     <h1>Mr. Nut</h1>
     <p class="tagline">Exploring AI-driven business solutions and sharing the journey</p>
