--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mr. Nut — Online Adventure</title>
-  <!-- Favicon - using your logo from images folder -->
-<link rel="icon" type="image/png" sizes="32x32" href="./images/mini_logo.png">
-<link rel="icon" type="image/png" sizes="192x192" href="./images/mini_logo.png">
-<link rel="apple-touch-icon" sizes="180x180" href="./images/mini_logo.png">
+  <title>NUT | M.R. Notenboom</title>
+
+  <!-- Favicon - using mini logo from images folder -->
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/mini_logo.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="./images/mini_logo.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./images/mini_logo.png">
+  <meta name="theme-color" content="#0A0F16"/>
+
   <style>
     :root{
       --bg:#0a0f16; --neon:#00e5ff; --neon-2:#00b7ff;
@@ -72,10 +75,10 @@
 </head>
 <body>
   <div class="container">
-    <!-- Updated: Logo from images folder -->
-  <img class="hero-logo" src="./images/NUT_N_LOGO_.png" alt="Mr. Nut digital logo">
+    <!-- Logo from images folder -->
+    <img class="hero-logo" src="./images/NUT_N_LOGO_.png" alt="NUT digital logo">
 
-    <h1>Mr. Nut</h1>
+    <h1>NUT | M.R. Notenboom</h1>
     <p class="tagline">Exploring AI-driven business solutions and sharing the journey</p>
     <p class="bio">Exploring what's possible in the AI era—together.</p>
 
