--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
 
     <h1>NUT | M.R. Notenboom</h1>
     <p class="tagline">Exploring AI-driven business solutions and sharing the journey</p>
-    <p class="bio">Exploring what's possible in the AI era—together.</p>
 
     <div class="links">
       <a href="mailto:info@mrnut.org" class="link-btn" aria-label="Email">
@@ -101,7 +100,7 @@
       </a>
     </div>
 
-    <p class="footer">Welcome to the adventure ✨</p>
+    <p class="footer">The AI era is here, welcome to the adventure ✨</p>
   </div>
 </body>
 </html>
