--- a/index.html
+++ b/index.html
@@ -1,106 +1,248 @@
+<!-- Save this as index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>NUT | M.R. Notenboom</title>
-
-  <!-- Favicon - using mini logo from images folder -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/mini_logo.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="./images/mini_logo.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="./images/mini_logo.png">
   <meta name="theme-color" content="#0A0F16"/>
 
   <style>
-    :root{
-      --bg:#0a0f16; --neon:#00e5ff; --neon-2:#00b7ff;
-      --ink:#dff9ff; --muted:#7ec9de;
+    :root {
+      --bg: #0a0f16;
+      --neon: #00e5ff;
+      --neon-2: #00b7ff;
+      --ink: #dff9ff;
+      --muted: #7ec9de;
+      --menu-bg: rgba(13,18,28,0.95);
+      --menu-item-bg: linear-gradient(200% 200% at 0% 0%, var(--neon) 0 30%, var(--neon-2) 60%, #0091ff 100%);
+      --menu-text: #001219;
     }
-    *{box-sizing:border-box;margin:0;padding:0}
-    body{
-      font-family: ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,Ubuntu,Cantarell,Arial;
-      min-height:100svh;color:var(--ink);
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      scroll-behavior: smooth;
+    }
+
+    body {
+      font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, Ubuntu, Cantarell, Arial;
+      color: var(--ink);
       background:
         radial-gradient(1200px 600px at 50% -10%, rgba(0,229,255,.18), transparent 60%),
         radial-gradient(1000px 500px at 110% 120%, rgba(0,121,255,.20), transparent 60%),
         radial-gradient(800px 400px at -10% 120%, rgba(0,229,255,.12), transparent 60%),
         var(--bg);
-      display:flex;align-items:center;justify-content:center;padding:32px;
     }
-    .container{
-      width:min(760px, 92vw);
-      background:linear-gradient(180deg, rgba(13,18,28,.7), rgba(9,14,22,.6));
-      border-radius:24px; padding:24px 40px 56px; position:relative; overflow:hidden;
-      box-shadow:0 0 0 1px rgba(0,229,255,.25) inset,
-                 0 30px 80px rgba(0,0,0,.6),
-                 0 0 120px rgba(0,229,255,.12);
+
+    .menu-toggle {
+      position: fixed;
+      top: 24px;
+      left: 24px;
+      width: 32px;
+      height: 24px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      cursor: pointer;
+      z-index: 1001;
     }
-    .hero-logo{
-      width:min(320px, 70%); aspect-ratio:1/1; display:block; margin:12px auto 8px;
-      object-fit:contain;
-      filter: drop-shadow(0 0 18px rgba(0,229,255,.45))
-              drop-shadow(0 0 40px rgba(0,183,255,.18));
-      animation:float 4s ease-in-out infinite;
+    .menu-toggle span {
+      height: 4px;
+      background-color: var(--neon);
+      border-radius: 2px;
+      transition: transform 0.3s, opacity 0.3s;
     }
-    @keyframes float{50%{transform:translateY(-6px)}}
-    h1{
-      font-size:42px; font-weight:800; letter-spacing:.4px; text-align:center;
-      text-shadow:0 0 20px rgba(0,229,255,.25); margin-top:6px
+    .menu-toggle.open span:nth-child(1) {
+      transform: translateY(10px) rotate(45deg);
     }
-    .tagline{ text-align:center; margin:6px 0 14px; color:var(--muted); font-size:18px }
-    .bio{ text-align:center; margin:0 auto 30px; max-width:54ch; line-height:1.6; color:#bfefff; opacity:.9 }
-    .links{ display:flex; flex-wrap:wrap; gap:14px; justify-content:center }
-    .link-btn{
-      display:inline-flex; align-items:center; gap:10px; padding:12px 20px; border-radius:12px;
-      color:#001219; text-decoration:none; font-weight:700;
-      background: radial-gradient(200% 200% at 0% 0%, var(--neon) 0 30%, var(--neon-2) 60%, #0091ff 100%);
-      box-shadow: 0 0 0 1px rgba(0,229,255,.35) inset,
-                  0 8px 24px rgba(0,183,255,.35),
-                  0 0 60px rgba(0,229,255,.18);
-      transition:.2s transform,.2s box-shadow,.2s filter;
+    .menu-toggle.open span:nth-child(2) {
+      opacity: 0;
     }
-    .link-btn:hover{
-      transform:translateY(-2px) scale(1.02);
-      box-shadow:0 0 0 1px rgba(255,255,255,.5) inset,
-                 0 10px 26px rgba(0,183,255,.45),
-                 0 0 80px rgba(0,229,255,.25);
-      filter:saturate(1.1);
+    .menu-toggle.open span:nth-child(3) {
+      transform: translateY(-10px) rotate(-45deg);
     }
-    .link-btn svg{ width:20px; height:20px; fill:#001219 }
-    .footer{ margin-top:40px; text-align:center; color:#8adfff; font-size:14px; opacity:.85 }
-    @media (max-width:600px){
-      h1{font-size:34px} .tagline{font-size:16px} .bio{font-size:15px}
+
+    .menu-overlay {
+      position: fixed;
+      inset: 0;
+      background: var(--menu-bg);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
+    .menu-overlay.open {
+      display: flex;
+    }
+    .menu-list {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+    .menu-item {
+      padding: 16px 28px;
+      border-radius: 12px;
+      font-size: 20px;
+      font-weight: 700;
+      color: var(--menu-text);
+      background: var(--menu-item-bg);
+      text-align: center;
+      text-decoration: none;
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+    .menu-item:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 0 0 1px rgba(255,255,255,.5) inset, 0 10px 26px rgba(0,183,255,.45), 0 0 80px rgba(0,229,255,.25);
+    }
+
+    .section {
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 60px 20px;
+      text-align: center;
+    }
+    .section h2 {
+      font-size: 32px;
+      margin-bottom: 20px;
+      text-shadow: 0 0 10px rgba(0,229,255,.2);
+    }
+    .section p {
+      max-width: 60ch;
+      font-size: 18px;
+      line-height: 1.6;
+      color: #c5f6ff;
+    }
+
+    .container {
+      max-width: 760px;
+      margin: 0 auto;
+      padding: 100px 20px 60px;
+    }
+
+    .hero-logo {
+      width: min(320px, 70%);
+      aspect-ratio: 1 / 1;
+      object-fit: contain;
+      margin: 0 auto 12px;
+      filter: drop-shadow(0 0 18px rgba(0,229,255,.45)) drop-shadow(0 0 40px rgba(0,183,255,.18));
+      animation: float 4s ease-in-out infinite;
+    }
+    @keyframes float {
+      50% { transform: translateY(-6px); }
+    }
+
+    h1 {
+      font-size: 42px;
+      font-weight: 800;
+      letter-spacing: .4px;
+      text-align: center;
+      text-shadow: 0 0 20px rgba(0,229,255,.25);
+    }
+
+    .tagline {
+      text-align: center;
+      margin: 6px 0 14px;
+      color: var(--muted);
+      font-size: 18px;
+    }
+
+    .footer {
+      margin-top: 40px;
+      text-align: center;
+      color: #8adfff;
+      font-size: 14px;
+      opacity: .85;
+    }
+
+    @media (max-width: 600px) {
+      h1 { font-size: 34px; }
+      .tagline { font-size: 16px; }
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <!-- Logo from images folder -->
-    <img class="hero-logo" src="./images/NUT_N_LOGO_.png" alt="NUT digital logo">
 
-    <h1>NUT | M.R. Notenboom</h1>
-    <p class="tagline">Exploring AI-driven business solutions and sharing the journey</p>
-
-    <div class="links">
-      <a href="mailto:info@mrnut.org" class="link-btn" aria-label="Email">
-        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2Zm0 4-8 5L4 8V6l8 5 8-5v2Z"/></svg>
-        Email
-      </a>
-      <a href="https://linkedin.com/in/riesnotenboom" class="link-btn" target="_blank" rel="noopener">
-        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M19 0H5A5 5 0 0 0 0 5v14a5 5 0 0 0 5 5h14a5 5 0 0 0 5-5V5a5 5 0 0 0-5-5Zm-11 19H5V8h3v11ZM6.5 6.7A1.75 1.75 0 1 1 6.5 3.2a1.75 1.75 0 0 1 0 3.5ZM20 19h-3v-5.6c0-3.37-4-3.11-4 0V19h-3V8h3v1.8c1.4-2.59 7-2.78 7 2.48V19Z"/></svg>
-        LinkedIn
-      </a>
-      <a href="https://github.com/Sincx79" class="link-btn" target="_blank" rel="noopener">
-        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.44 9.8 8.21 11.39.6.11.79-.26.79-.58v-2.24c-3.34.73-4.03-1.42-4.03-1.42-.55-1.39-1.33-1.76-1.33-1.76-1.09-.75.08-.73.08-.73 1.21.09 1.84 1.24 1.84 1.24 1.07 1.83 2.81 1.3 3.5.99.11-.78.42-1.31.76-1.61-2.67-.3-5.47-1.33-5.47-5.93 0-1.31.47-2.38 1.24-3.22-.12-.3-.54-1.52.12-3.18 0 0 1.01-.32 3.3 1.23.96-.27 1.98-.4 3-.4s2.04.13 3 .4c2.29-1.55 3.3-1.23 3.3-1.23.66 1.66.24 2.88.12 3.18.77.84 1.24 1.91 1.24 3.22 0 4.61-2.81 5.63-5.48 5.93.43.37.82 1.1.82 2.22v3.29c0 .32.19.69.8.58C20.56 21.8 24 17.3 24 12 24 5.37 18.63 0 12 0Z"/></svg>
-        GitHub
-      </a>
-      <a href="https://twitter.com/Sincx79" class="link-btn" target="_blank" rel="noopener">
-        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M18.24 2.25h3.31l-7.23 8.26 8.5 11.24H16.17l-5.21-6.82L4.99 21.75H1.68l7.73-8.84L1.25 2.25H8.08l4.71 6.23zm-1.16 17.52h1.83L7.08 4.13H5.12z"/></svg>
-        Twitter
-      </a>
-    </div>
-
-    <p class="footer">The AI era is here, welcome to the adventure ✨</p>
+  <!-- Hamburger menu toggle -->
+  <div class="menu-toggle" id="menuToggle">
+    <span></span>
+    <span></span>
+    <span></span>
   </div>
+
+  <!-- Menu overlay -->
+  <div class="menu-overlay" id="menuOverlay">
+    <div class="menu-list">
+      <a href="#what-is-ai" class="menu-item">What is AI</a>
+      <a href="#impact-of-ai" class="menu-item">Impact of AI</a>
+      <a href="#future-of-ai" class="menu-item">Future of AI</a>
+      <a href="#ai-applications" class="menu-item">AI Applications</a>
+      <a href="#how-to-use-ai" class="menu-item">How to use AI</a>
+    </div>
+  </div>
+
+  <div class="container">
+    <img class="hero-logo" src="./images/NUT_N_LOGO_.png" alt="NUT digital logo">
+    <h1>NUT | M.R. Notenboom</h1>
+    <p class="tagline">Exploring AI‑driven business solutions and sharing the journey</p>
+  </div>
+
+  <!-- Scrollable Sections -->
+  <section class="section" id="what-is-ai">
+    <h2>What is AI?</h2>
+    <p>Artificial Intelligence (AI) refers to the simulation of human intelligence by machines, especially computer systems. This includes learning, reasoning, problem-solving, and language understanding.</p>
+  </section>
+
+  <section class="section" id="impact-of-ai">
+    <h2>Impact of AI</h2>
+    <p>AI is transforming industries — from automating routine tasks to enhancing decision-making, it’s redefining how we work, communicate, and create.</p>
+  </section>
+
+  <section class="section" id="future-of-ai">
+    <h2>Future of AI</h2>
+    <p>The future of AI holds promises and challenges — smarter systems, ethical dilemmas, and integration into everyday life at unprecedented scales.</p>
+  </section>
+
+  <section class="section" id="ai-applications">
+    <h2>AI Applications</h2>
+    <p>From healthcare and finance to entertainment and agriculture, AI applications are revolutionizing productivity and creativity across sectors.</p>
+  </section>
+
+  <section class="section" id="how-to-use-ai">
+    <h2>How to Use AI</h2>
+    <p>Learning AI doesn’t require a PhD — start with tools like ChatGPT, explore data, learn Python basics, and keep experimenting.</p>
+  </section>
+
+  <p class="footer">The AI era is here, welcome to the adventure ✨</p>
+
+  <script>
+    const menuToggle = document.getElementById('menuToggle');
+    const menuOverlay = document.getElementById('menuOverlay');
+
+    menuToggle.addEventListener('click', () => {
+      menuToggle.classList.toggle('open');
+      menuOverlay.classList.toggle('open');
+    });
+
+    menuOverlay.addEventListener('click', (e) => {
+      if (e.target === menuOverlay) {
+        menuToggle.classList.remove('open');
+        menuOverlay.classList.remove('open');
+      }
+    });
+
+    // Close menu on item click
+    document.querySelectorAll('.menu-item').forEach(item => {
+      item.addEventListener('click', () => {
+        menuToggle.classList.remove('open');
+        menuOverlay.classList.remove('open');
+      });
+    });
+  </script>
 </body>
 </html>
