--- a/index.html
+++ b/index.html
@@ -236,6 +236,14 @@
     <span></span>
     <span></span>
   </div>
+  .hero-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 32px;
+}
+
 
   <!-- Overlay for menu items -->
   <div class="menu-overlay" id="menuOverlay">
@@ -250,7 +258,12 @@
   </div>
 
   <!-- Landing / hero -->
+  <main class="hero-wrapper">
   <div class="container" id="top">
+    ...
+  </div>
+</main>
+
     <img class="hero-logo" src="./images/NUT_N_LOGO_.png" alt="NUT digital logo">
     <h1>NUT | M.R. Notenboom</h1>
     <p class="tagline">Exploring AI-driven business solutions and sharing the journey</p>
