--- a/index.html
+++ b/index.html
@@ -211,6 +211,9 @@
 </head>
 <body>
 
+<!-- Background hexagon image -->
+<div style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 0; background-image: url('./images/bg-hexagons.png'); background-size: cover; background-position: center; opacity: 0.25; pointer-events: none;"></div>
+
 <div class="hex-hero">
   <div class="hex-container">
     <svg class="hex-3d hex-layer-3" viewBox="0 0 200 200">
